se agrega panel administracion y refactoriza codigo para separar logicas

--- a/src/style.css
+++ b/src/style.css
@@ -160,3 +160,8 @@ main {
 .category:hover {
   color: #c39fbe;
 }
+
+/* Ocultar el botón de login/logout mientras se determina el estado */
+#login-link.login-status-loading {
+  visibility: hidden; /* Usar visibility para evitar saltos en el layout */
+}
