--- a/src/templates/products.html
+++ b/src/templates/products.html
@@ -19,7 +19,7 @@
             <p class="card-text product-stock mb-1"></p>
 
           </div>
-          <button class="btn btn-primary add-to-cart fs-6 text-center"> Agregar
+          <button class="btn custom-btn-primary add-to-cart fs-6 text-center"> Agregar
             <i class="fas fa-shopping-cart"></i>
           </button>
           <!-- Toast -->
